--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Homework 10</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slim-select/dist/slimselect.min.css">
 </head>
 
 <body>
@@ -16,6 +17,7 @@
 
   <script src="index.js" type="module"></script>
   <script src="cat-api.js" type="module"></script>
+  <script src="https://cdn.jsdelivr.net/npm/slim-select/dist/slimselect.min.js"></script>
 </body>
 
 </html>
