--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Homework 10</title>
-  <link rel="stylesheet" href="style.css">
+
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slim-select/dist/slimselect.min.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
