--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,11 @@
 
 <body>
   <select class="breed-select"></select>
-  <span class="loader hidden"></span>
+  <span class="loader"></span>
   <p class="error hidden">Oops! Something went wrong! Try reloading the page!</p>
 
-  <div class="cat-info hidden">
-    <img src="" alt="Cat Image" class="cat-image">
+  <div class="cat-info">
+
     <div class="cat-details">
       <h2></h2>
       <p class="description"></p>
@@ -24,7 +24,7 @@
       <p class="temperament"></p>
     </div>
   </div>
-
+  <script src="path-to-iziToast.js"></script>
   <script src="index.js" type="module"></script>
   <script src="cat_api.js" type="module"></script>
 </body>
