--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Homework 10</title>
-
+  <link rel="stylesheet" href="iziToast.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slim-select/dist/slimselect.min.css">
   <link rel="stylesheet" href="./style.css">
 </head>
@@ -24,7 +24,6 @@
       <p class="temperament"></p>
     </div>
   </div>
-  <script src="path-to-iziToast.js"></script>
   <script src="index.js" type="module"></script>
   <script src="cat_api.js" type="module"></script>
 </body>
